test/simple/ill-typed/singletype_payload.caprice
(* TEST
  include refute;
*)


let t : singleton (`A of int | `B of bool) =
  `A of int | `B of int
